--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <viewLayoutGuide key="safeArea" id="SyF-aw-l80"/>
-                                <color key="backgroundColor" red="0.045809175438407568" green="0.832293124206679" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.61960784313725492" green="0.84705882352941175" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="d1K-p0-Jb8">
                                 <rect key="frame" x="0.0" y="111" width="393" height="658"/>
@@ -761,11 +761,11 @@
             </objects>
             <point key="canvasLocation" x="4643.5114503816794" y="1000.7042253521128"/>
         </scene>
-        <!--Books-->
+        <!--Navigation Controller-->
         <scene sceneID="GDk-hv-E8r">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G1p-cG-cdN" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Books" id="0gE-ex-RJr"/>
+                    <tabBarItem key="tabBarItem" title="" image="book" catalog="system" selectedImage="book.fill" id="0gE-ex-RJr"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1PF-tp-9Rm">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -780,12 +780,12 @@
             </objects>
             <point key="canvasLocation" x="1094" y="-427"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Custom Tab Bar Controller-->
         <scene sceneID="yhi-UJ-Bgy">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eDr-zW-4Ps" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="eDr-zW-4Ps" customClass="CustomTabBarController" customModule="Goldence" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kW2-F2-M4l">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backgroundImage="book" catalog="system" id="kW2-F2-M4l">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -801,11 +801,11 @@
             </objects>
             <point key="canvasLocation" x="-189" y="1644"/>
         </scene>
-        <!--Add-->
+        <!--Navigation Controller-->
         <scene sceneID="dJA-d0-pxF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CAx-h9-dbz" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Add" id="KjI-ud-zGv"/>
+                    <tabBarItem key="tabBarItem" title="" image="plus.message" catalog="system" selectedImage="plus.message.fill" id="KjI-ud-zGv"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="h8S-z9-Y9g"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Af-lc-IBV">
@@ -992,11 +992,11 @@
             </objects>
             <point key="canvasLocation" x="6376" y="1062"/>
         </scene>
-        <!--分享-->
+        <!--Navigation Controller-->
         <scene sceneID="Le8-6N-ZuP">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xse-QB-l7Z" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="分享" id="3eQ-k9-3KX"/>
+                    <tabBarItem key="tabBarItem" title="" image="bookmark" catalog="system" selectedImage="bookmark.fill" id="3eQ-k9-3KX"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="jIc-sk-gWl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jyw-nZ-F36">
@@ -1083,11 +1083,11 @@
             </objects>
             <point key="canvasLocation" x="1962.5954198473282" y="2190.8450704225352"/>
         </scene>
-        <!--schedule-->
+        <!--Navigation Controller-->
         <scene sceneID="ZCq-4x-qIZ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6xm-oI-lIA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="schedule" id="zFf-Gt-Vmv"/>
+                    <tabBarItem key="tabBarItem" title="" image="calendar" catalog="system" selectedImage="calendar.badge.clock" id="zFf-Gt-Vmv"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="NKb-qo-vbT">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
@@ -1153,9 +1153,15 @@
         <image name="book" catalog="system" width="128" height="99"/>
         <image name="book.circle" catalog="system" width="128" height="123"/>
         <image name="book.fill" catalog="system" width="128" height="95"/>
+        <image name="bookmark" catalog="system" width="110" height="128"/>
+        <image name="bookmark.fill" catalog="system" width="110" height="128"/>
+        <image name="calendar" catalog="system" width="128" height="107"/>
+        <image name="calendar.badge.clock" catalog="system" width="128" height="108"/>
         <image name="doc.richtext" catalog="system" width="115" height="128"/>
         <image name="greetingcard" catalog="system" width="108" height="128"/>
         <image name="greetingcard.fill" catalog="system" width="105" height="128"/>
+        <image name="plus.message" catalog="system" width="128" height="116"/>
+        <image name="plus.message.fill" catalog="system" width="128" height="114"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
