--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eDr-zW-4Ps">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -1301,7 +1300,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="閱讀分析" id="M90-np-NLX"/>
                     <connections>
-                        <outlet property="myView" destination="Ffz-Cd-h3f" id="d46-dN-tyK"/>
+                        <outlet property="lineChartView" destination="Ffz-Cd-h3f" id="d46-dN-tyK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j74-VW-SBM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
